Faces: Write preset faceproperties to the right location

When loading presets we expect the faceproperties file to be located in
"contents/config/" but when writing we are placing it in "contents/"
which means that custom presets are not loaded properly.

BUG: 450745